@@ -1,26 +1,19 @@
 package greencity.validator;
 
 import greencity.annotations.ImageValidation;
-import java.util.Arrays;
-import java.util.List;
 import jakarta.validation.ConstraintValidator;
 import jakarta.validation.ConstraintValidatorContext;
+import java.util.List;
 import org.springframework.web.multipart.MultipartFile;
 
 public class ImageValidator implements ConstraintValidator<ImageValidation, MultipartFile> {
-    private final List<String> validType = Arrays.asList("image/jpeg", "image/png", "image/jpg");
-
-    @Override
-    public void initialize(ImageValidation constraintAnnotation) {
-        // Initializes the validator in preparation for #isValid calls
-    }
+    private final List<String> validType = List.of("image/jpeg", "image/png", "image/jpg");
 
     @Override
     public boolean isValid(MultipartFile image, ConstraintValidatorContext constraintValidatorContext) {
         if (image == null) {
             return true;
-        } else {
-            return validType.contains(image.getContentType());
         }
+        return validType.contains(image.getContentType());
     }
 }
